--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
+    height: 100vh;
+    font-family: 'Nunito', sans-serif;
     color: rgb(244, 255, 254);
     background-image: url(https://www.cambridge.org/elt/blog/wp-content/uploads/2019/02/background-3268840_1920.jpg);
     background-repeat: no-repeat;
@@ -8,4 +12,38 @@ body {
 header {
     text-align: center;
     padding: 30px;
+}
+main {
+    height: 100vh;
+}
+
+input {
+    border:5px solid #035f86;
+    border-radius: 5px;
+}
+
+button {
+    background-color: transparent; 
+    border: none;
+}
+button:hover {
+    transform: scale(1.1);
+}
+button:active {
+    transform: scale(0.9);
+}
+#searchcloud {
+    width: 70px;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    color: rgb(2, 59, 54);
+    padding: 40px 30px;
+    text-align: center;
 }
